# daggerheart-vtt

./: .gitignore  BACKEND_TEST_REPORT.md  CURRENT_STATUS.md  Cargo.toml  DEBUG_MOBILE.md  FRONTEND_TEST_GUIDE.md  PHASE_5A_CLIENT_UPDATE.md  PROJECT_STATUS.md  README.md  STATUS.md  demo.sh  lint-test.sh
.github/workflows/: ci.yml
client/: gm.html  index.html  mobile.html
client/css/: style.css
client/js/: app.js  canvas.js  character.js  gm.js  websocket.js
docs/: ARCHITECTURE.md  BACKEND_COMBAT_TEST_REPORT.md  BUG_FIX_AUTO_RECONNECT.md  COMBAT_SYSTEM_SPEC.md  DICE_ROLL_SPEC.md  FEATURE_EVENT_LOG.md  FEATURE_GM_ROLL_REQUESTS.md  FRONTEND_COMBAT_TEST_GUIDE.md  GAMEPLAY_FEATURES.md  IMPLEMENTATION_PLAN.md  PHASE1_TESTING.md  PHASE2_TESTING.md  PHASE3_TESTING.md  PHASE4_TESTING.md  PHASES.md  PROTOCOL.md  TESTING.md  UNKNOWNS_RESOLVED.md
server/: Cargo.toml
server/src/: adversaries.rs  game.rs  main.rs  protocol.rs  routes.rs  save.rs  websocket.rs
