[workspace]
members = ["server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jake"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# QR code generation
qrcode = "0.14"

# Game engine - path to local daggerheart-engine
daggerheart-engine = { path = "../daggerheart-engine" }
