[package]
name = "daggerheart-vtt-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Web framework
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
qrcode.workspace = true

# Game engine
daggerheart-engine.workspace = true

# Image encoding for QR codes
image = "0.25"
base64 = "0.22"

# Futures for WebSocket
futures = "0.3"
futures-util = "0.3"
